rtlilParser.py
# Generated from rtlil.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


from rtlil import *

curr_module = None




class rtlilParser ( Parser ):

    grammarFileName = "rtlil.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'autoidx'", "'module'", "'end'", "'parameter'", 
                     "'wire'", "'width'", "'offset'", "'input'", "'output'", 
                     "'inout'", "'upto'", "'signed'", "'connect'", "'['", 
                     "':'", "']'", "'{'", "'}'", "'cell'", "'real'", "'process'", 
                     "'switch'", "'case'", "','", "'sync'", "'global'", 
                     "'init'", "'always'", "'low'", "'high'", "'posedge'", 
                     "'negedge'", "'edge'", "'update'", "'assign'", "'attribute'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "STRING", "ID", "VALUE", "INT", "EOL", 
                      "SKIP_" ]

    RULE_file_ = 0
    RULE_autoidx_stmt = 1
    RULE_module = 2
    RULE_module_body = 3
    RULE_param_stmt = 4
    RULE_wire = 5
    RULE_wire_option = 6
    RULE_conn_stmt = 7
    RULE_sig_spec = 8
    RULE_sig_specs = 9
    RULE_cell = 10
    RULE_cell_body_stmt = 11
    RULE_process = 12
    RULE_switch = 13
    RULE_case = 14
    RULE_compare = 15
    RULE_sync = 16
    RULE_sync_stmt = 17
    RULE_sync_type = 18
    RULE_update_stmt = 19
    RULE_assign_stmt = 20
    RULE_attr_stmts = 21
    RULE_attr_stmt = 22
    RULE_const = 23

    ruleNames =  [ "file_", "autoidx_stmt", "module", "module_body", "param_stmt", 
                   "wire", "wire_option", "conn_stmt", "sig_spec", "sig_specs", 
                   "cell", "cell_body_stmt", "process", "switch", "case", 
                   "compare", "sync", "sync_stmt", "sync_type", "update_stmt", 
                   "assign_stmt", "attr_stmts", "attr_stmt", "const" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    STRING=37
    ID=38
    VALUE=39
    INT=40
    EOL=41
    SKIP_=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class File_Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ms = None
            self._module = None # ModuleContext

        def EOF(self):
            return self.getToken(rtlilParser.EOF, 0)

        def autoidx_stmt(self):
            return self.getTypedRuleContext(rtlilParser.Autoidx_stmtContext,0)


        def module(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.ModuleContext)
            else:
                return self.getTypedRuleContext(rtlilParser.ModuleContext,i)


        def getRuleIndex(self):
            return rtlilParser.RULE_file_

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_" ):
                listener.enterFile_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_" ):
                listener.exitFile_(self)




    def file_(self):

        localctx = rtlilParser.File_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx.ms = []
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==rtlilParser.T__0:
                self.state = 49
                self.autoidx_stmt()


            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==rtlilParser.T__1 or _la==rtlilParser.T__35:
                self.state = 52
                localctx._module = self.module()
                localctx.ms.append(localctx._module.m)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(rtlilParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Autoidx_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(rtlilParser.INT, 0)

        def EOL(self):
            return self.getToken(rtlilParser.EOL, 0)

        def getRuleIndex(self):
            return rtlilParser.RULE_autoidx_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAutoidx_stmt" ):
                listener.enterAutoidx_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAutoidx_stmt" ):
                listener.exitAutoidx_stmt(self)




    def autoidx_stmt(self):

        localctx = rtlilParser.Autoidx_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_autoidx_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(rtlilParser.T__0)
            self.state = 63
            self.match(rtlilParser.INT)
            self.state = 64
            self.match(rtlilParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.m = None
            self._attr_stmts = None # Attr_stmtsContext
            self._ID = None # Token

        def attr_stmts(self):
            return self.getTypedRuleContext(rtlilParser.Attr_stmtsContext,0)


        def ID(self):
            return self.getToken(rtlilParser.ID, 0)

        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(rtlilParser.EOL)
            else:
                return self.getToken(rtlilParser.EOL, i)

        def module_body(self):
            return self.getTypedRuleContext(rtlilParser.Module_bodyContext,0)


        def getRuleIndex(self):
            return rtlilParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)




    def module(self):

        localctx = rtlilParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module)
        try:
            self.enterOuterAlt(localctx, 1)
            global curr_module
            self.state = 67
            localctx._attr_stmts = self.attr_stmts()
            self.state = 68
            self.match(rtlilParser.T__1)
            self.state = 69
            localctx._ID = self.match(rtlilParser.ID)
            self.state = 70
            self.match(rtlilParser.EOL)
            localctx.m = Module((None if localctx._ID is None else localctx._ID.text), localctx._attr_stmts.a)
            curr_module = localctx.m
            self.state = 73
            self.module_body(localctx.m)
            self.state = 74
            self.match(rtlilParser.T__2)
            self.state = 75
            self.match(rtlilParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, m=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.m = None
            self._wire = None # WireContext
            self._conn_stmt = None # Conn_stmtContext
            self._cell = None # CellContext
            self._process = None # ProcessContext
            self.m = m

        def param_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.Param_stmtContext)
            else:
                return self.getTypedRuleContext(rtlilParser.Param_stmtContext,i)


        def wire(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.WireContext)
            else:
                return self.getTypedRuleContext(rtlilParser.WireContext,i)


        def conn_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.Conn_stmtContext)
            else:
                return self.getTypedRuleContext(rtlilParser.Conn_stmtContext,i)


        def cell(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.CellContext)
            else:
                return self.getTypedRuleContext(rtlilParser.CellContext,i)


        def process(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.ProcessContext)
            else:
                return self.getTypedRuleContext(rtlilParser.ProcessContext,i)


        def getRuleIndex(self):
            return rtlilParser.RULE_module_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_body" ):
                listener.enterModule_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_body" ):
                listener.exitModule_body(self)




    def module_body(self, m):

        localctx = rtlilParser.Module_bodyContext(self, self._ctx, self.state, m)
        self.enterRule(localctx, 6, self.RULE_module_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rtlilParser.T__3) | (1 << rtlilParser.T__4) | (1 << rtlilParser.T__12) | (1 << rtlilParser.T__18) | (1 << rtlilParser.T__20) | (1 << rtlilParser.T__35))) != 0):
                self.state = 90
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 77
                    self.param_stmt(localctx.m)
                    pass

                elif la_ == 2:
                    self.state = 78
                    localctx._wire = self.wire()
                    localctx.m.add_wire(localctx._wire.w)
                    pass

                elif la_ == 3:
                    self.state = 81
                    localctx._conn_stmt = self.conn_stmt()
                    localctx.m.add_connection(localctx._conn_stmt.c)
                    pass

                elif la_ == 4:
                    self.state = 84
                    localctx._cell = self.cell()
                    localctx.m.add_cell(localctx._cell.c)
                    pass

                elif la_ == 5:
                    self.state = 87
                    localctx._process = self.process()
                    localctx.m.add_process(localctx._process.p)
                    pass


                self.state = 94
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1, m=None):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.m = None
            self._ID = None # Token
            self._const = None # ConstContext
            self.m = m

        def ID(self):
            return self.getToken(rtlilParser.ID, 0)

        def EOL(self):
            return self.getToken(rtlilParser.EOL, 0)

        def const(self):
            return self.getTypedRuleContext(rtlilParser.ConstContext,0)


        def getRuleIndex(self):
            return rtlilParser.RULE_param_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_stmt" ):
                listener.enterParam_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_stmt" ):
                listener.exitParam_stmt(self)




    def param_stmt(self, m):

        localctx = rtlilParser.Param_stmtContext(self, self._ctx, self.state, m)
        self.enterRule(localctx, 8, self.RULE_param_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(rtlilParser.T__3)
            self.state = 96
            localctx._ID = self.match(rtlilParser.ID)
            localctx.m.add_param((None if localctx._ID is None else localctx._ID.text))
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rtlilParser.STRING) | (1 << rtlilParser.VALUE) | (1 << rtlilParser.INT))) != 0):
                self.state = 98
                localctx._const = self.const()
                localctx.m.set_param_val((None if localctx._ID is None else localctx._ID.text), localctx._const.c)


            self.state = 103
            self.match(rtlilParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WireContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.w = None
            self.opts = None
            self._attr_stmts = None # Attr_stmtsContext
            self._wire_option = None # Wire_optionContext
            self._ID = None # Token

        def attr_stmts(self):
            return self.getTypedRuleContext(rtlilParser.Attr_stmtsContext,0)


        def ID(self):
            return self.getToken(rtlilParser.ID, 0)

        def EOL(self):
            return self.getToken(rtlilParser.EOL, 0)

        def wire_option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.Wire_optionContext)
            else:
                return self.getTypedRuleContext(rtlilParser.Wire_optionContext,i)


        def getRuleIndex(self):
            return rtlilParser.RULE_wire

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWire" ):
                listener.enterWire(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWire" ):
                listener.exitWire(self)




    def wire(self):

        localctx = rtlilParser.WireContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_wire)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx.opts = {}
            self.state = 106
            localctx._attr_stmts = self.attr_stmts()
            self.state = 107
            self.match(rtlilParser.T__4)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << rtlilParser.T__5) | (1 << rtlilParser.T__6) | (1 << rtlilParser.T__7) | (1 << rtlilParser.T__8) | (1 << rtlilParser.T__9) | (1 << rtlilParser.T__10) | (1 << rtlilParser.T__11))) != 0):
                self.state = 108
                localctx._wire_option = self.wire_option()
                localctx.opts = {**localctx.opts, **localctx._wire_option.o}
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            localctx._ID = self.match(rtlilParser.ID)
            self.state = 117
            self.match(rtlilParser.EOL)
            localctx.w = Wire((None if localctx._ID is None else localctx._ID.text), localctx._attr_stmts.a, localctx.opts)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Wire_optionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.o = None
            self._INT = None # Token

        def INT(self):
            return self.getToken(rtlilParser.INT, 0)

        def getRuleIndex(self):
            return rtlilParser.RULE_wire_option

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWire_option" ):
                listener.enterWire_option(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWire_option" ):
                listener.exitWire_option(self)




    def wire_option(self):

        localctx = rtlilParser.Wire_optionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_wire_option)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rtlilParser.T__5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(rtlilParser.T__5)
                self.state = 121
                localctx._INT = self.match(rtlilParser.INT)
                localctx.o = {"width": int((None if localctx._INT is None else localctx._INT.text))}
                pass
            elif token in [rtlilParser.T__6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(rtlilParser.T__6)
                self.state = 124
                localctx._INT = self.match(rtlilParser.INT)
                localctx.o = {"offset": int((None if localctx._INT is None else localctx._INT.text))}
                pass
            elif token in [rtlilParser.T__7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 126
                self.match(rtlilParser.T__7)
                self.state = 127
                localctx._INT = self.match(rtlilParser.INT)
                localctx.o = {"input": int((None if localctx._INT is None else localctx._INT.text))}
                pass
            elif token in [rtlilParser.T__8]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.match(rtlilParser.T__8)
                self.state = 130
                localctx._INT = self.match(rtlilParser.INT)
                localctx.o = {"output": int((None if localctx._INT is None else localctx._INT.text))}
                pass
            elif token in [rtlilParser.T__9]:
                self.enterOuterAlt(localctx, 5)
                self.state = 132
                self.match(rtlilParser.T__9)
                self.state = 133
                localctx._INT = self.match(rtlilParser.INT)
                localctx.o = {"inout": int((None if localctx._INT is None else localctx._INT.text))}
                pass
            elif token in [rtlilParser.T__10]:
                self.enterOuterAlt(localctx, 6)
                self.state = 135
                self.match(rtlilParser.T__10)
                localctx.o = {"upto": 1}
                pass
            elif token in [rtlilParser.T__11]:
                self.enterOuterAlt(localctx, 7)
                self.state = 137
                self.match(rtlilParser.T__11)
                localctx.o = {"signed": 1}
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Conn_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.c = None
            self.p = None # Sig_specContext
            self.w = None # Sig_specContext

        def EOL(self):
            return self.getToken(rtlilParser.EOL, 0)

        def sig_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.Sig_specContext)
            else:
                return self.getTypedRuleContext(rtlilParser.Sig_specContext,i)


        def getRuleIndex(self):
            return rtlilParser.RULE_conn_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConn_stmt" ):
                listener.enterConn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConn_stmt" ):
                listener.exitConn_stmt(self)




    def conn_stmt(self):

        localctx = rtlilParser.Conn_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conn_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(rtlilParser.T__12)
            self.state = 142
            localctx.p = self.sig_spec(0)
            self.state = 143
            localctx.w = self.sig_spec(0)
            self.state = 144
            self.match(rtlilParser.EOL)
            localctx.c = Connection(localctx.p.s, localctx.w.s) 
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sig_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.s = None
            self.sig = None # Sig_specContext
            self._const = None # ConstContext
            self._ID = None # Token
            self._sig_specs = None # Sig_specsContext
            self.st = None # Token
            self.end = None # Token

        def const(self):
            return self.getTypedRuleContext(rtlilParser.ConstContext,0)


        def ID(self):
            return self.getToken(rtlilParser.ID, 0)

        def sig_specs(self):
            return self.getTypedRuleContext(rtlilParser.Sig_specsContext,0)


        def sig_spec(self):
            return self.getTypedRuleContext(rtlilParser.Sig_specContext,0)


        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(rtlilParser.INT)
            else:
                return self.getToken(rtlilParser.INT, i)

        def getRuleIndex(self):
            return rtlilParser.RULE_sig_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSig_spec" ):
                listener.enterSig_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSig_spec" ):
                listener.exitSig_spec(self)



    def sig_spec(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = rtlilParser.Sig_specContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_sig_spec, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [rtlilParser.STRING, rtlilParser.VALUE, rtlilParser.INT]:
                self.state = 148
                localctx._const = self.const()
                localctx.s = ConstSigSpec(localctx._const.c) 
                pass
            elif token in [rtlilParser.ID]:
                self.state = 151
                localctx._ID = self.match(rtlilParser.ID)
                assert curr_module is not None
                if (None if localctx._ID is None else localctx._ID.text) not in curr_module.wires:
                  raise SystemError(f"Sigspec refers to wire '{(None if localctx._ID is None else localctx._ID.text)}' that is not present in its module") 
                localctx.s = WireSigSpec(curr_module.wires[(None if localctx._ID is None else localctx._ID.text)]) 
                pass
            elif token in [rtlilParser.T__16]:
                self.state = 156
                self.match(rtlilParser.T__16)
                self.state = 157
                localctx._sig_specs = self.sig_specs()
                self.state = 158
                self.match(rtlilParser.T__17)
                localctx.s = ConcatSigSpec(localctx._sig_specs.ss) 
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 174
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = rtlilParser.Sig_specContext(self, _parentctx, _parentState)
                    localctx.sig = _prevctx
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_sig_spec)
                    self.state = 163
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 164
                    self.match(rtlilParser.T__13)
                    self.state = 165
                    localctx.st = self.match(rtlilParser.INT)
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==rtlilParser.T__14:
                        self.state = 166
                        self.match(rtlilParser.T__14)
                        self.state = 167
                        localctx.end = self.match(rtlilParser.INT)


                    self.state = 170
                    self.match(rtlilParser.T__15)
                    localctx.s = SliceSigSpec(localctx.sig.s, (None if localctx.st is None else localctx.st.text), (None if localctx.end is None else localctx.end.text))  
                self.state = 176
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Sig_specsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ss = None
            self._sig_spec = None # Sig_specContext

        def sig_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(rtlilParser.Sig_specContext)
            else:
                return self.getTypedRuleContext(rtlilParser.Sig_specContext,i)


        def getRuleIndex(self):
            return rtlilParser.RULE_sig_specs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSig_specs" ):
                listener.enterSig_specs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSig_specs" ):
                listener.exitSig_specs(self)




    def sig_specs(self):
